[package]
name = "torrenthealer"
version = "0.1.0"
edition = "2021"

[dependencies]
bendy = "0.3.3"
console-subscriber = "0.4.0"
dotenvy = "0.15.7"
log = "0.4.22"
mainline = { version = "2.0.1", features = ["async"] }
tokio = { version = "1.39.3", features = ["rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
